examples/test/testpolicy7237.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7237
  namespace: namespace81
spec:
  podSelector:
    matchLabels:
      key34: value9
      key33: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value45
          key19: value24
      podSelector:
        matchLabels:
          key12: value49
          key19: value28
          key30: value31
